# lox_cplusplus_part_two

./: .gitignore  CMakeLists.txt  README.md  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  debug.cpp  debug.h  instruction_guide_for_loops.txt  instructions_for_function_calls.txt  main  main.cpp  memory.cpp  memory.h  object.cpp  object.h  scanner.cpp  scanner.h  serialize.cpp  serialize.h  table.cpp  table.h  value.cpp  value.h  vm.cpp  vm.h  vmdata.proto
bytecode_instructions/: outer_inner_basic_closure_instructions.txt  theinstructions.txt
python_interpreter/: lox_part_two_interpreter.py  vm_data_generator.py
python_interpreter/lib/: serializationPackage.py
test_scripts/: VMDataFile.txt  class_methods.lox  closed_upvalues.lox  for_loop_test.txt  four_layers_with_inner_addition_closures.lox  global_variables.txt  jump_test.txt  linked_upvalues.lox  outer_and_middle_closure.lox  outer_closure_upvalues.lox  outer_middle_with_calls_closure.lox  script2.lox  script5.txt  superclasses_1.lox  test_for_strings.txt  test_stack_trace.lox  three_layers_with_inner_addition_closures.lox
